--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
                       <i class="fas fa-deaf bar-highlight"></i>
                       <div>Deafened</div>
                     </a>
+                    <a class="status-debuffed">
+                      <i class="fas fa-angle-double-down bar-highlight"></i>
+                      <div>Debuffed</div>
+                    </a>                    
                     <a class="status-exhausted">
                       <i class="far fa-user bar-highlight"></i>
                       <div>Exhausted</div>
@@ -1418,16 +1422,19 @@
     font-size: 1rem;
     position: absolute;
     background-color:#5f5f5f;
-    box-shadow: 8px 8px 16px 8px #00000060;
+    box-shadow: 0px 0px 16px 16px #00000060;
   }
 
   .dropdown-content.status-dropdown {
     flex-direction: column;
     margin-top: 1rem;
+    padding: 0.5rem;
+    padding-bottom: 0;
+    border-radius: 5px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
     font-style: italic;
-    background-color: #00000061;
+    background-color: #00000060;
     pointer-events: none;
   }
 
@@ -1435,23 +1442,23 @@
     display: flex;
     align-items: center;
     padding: 0;
-    margin-bottom: 5%;
+    margin-bottom: 0.5rem;
   }
 
-  .dropdown-content.status-dropdown a i {
-    background: linear-gradient(to top, #5165B9, #5f2292 );
-    border-radius: 3px;
-    width: 1.7rem;
-    height: 1.7rem;
+  .dropdown-content.status-dropdown a i { /* make status icon class with individual overrides */
     display: flex;
     justify-content: center;
     align-items: center;
-    color: whitesmoke;
+    width: 2rem;
+    height: 2rem;
     margin-right: 0.5rem;
+    border-radius: 5px;
+    color: whitesmoke;
+    background: linear-gradient(to top, #5165B9, #5f2292 );
   }
 
   .dropdown-content.status-dropdown a.status-buffed i {
-    background: linear-gradient(to bottom, #1cc613, #0e9255 );
+    background: linear-gradient(to top, #1cc613, #fad687 );
   }
 
   .dropdown-content.status-dropdown a.status-concentrating i {
@@ -1459,11 +1466,11 @@
   }
 
   .dropdown-content.status-dropdown a.status-cover i {
-    background: linear-gradient(to bottom, #5165B9, #0e9255 );
+    background: linear-gradient(to top, #31a3c5, #0e9255 );
   }
 
   .dropdown-content.status-dropdown a.status-invisible i {
-    background: linear-gradient(to bottom, grey, darkgrey );
+    background: linear-gradient(to top, #5165B9, darkgrey );
   }
 
   .dropdown-content.status-dropdown a.status-raging i {
@@ -1599,13 +1606,13 @@
   }
 
   .bar-shadow {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 6px #00000030;
+    box-shadow: inset 0 0 6px #00000030;
   }
 
   .bar-highlight {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.7);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.7);    
+    -webkit-box-shadow: inset 0 0 6px #00000070;
+    box-shadow: inset 0 0 6px #00000070;    
   }
 
   .hit-points-bar {
@@ -1818,8 +1825,8 @@
   }
 
   .attack-list::-webkit-scrollbar-track, .item-list::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 6px #00000030;
+    box-shadow: inset 0 0 6px #00000030;
   }
 
   .attack-list::-webkit-scrollbar-thumb, .item-list::-webkit-scrollbar-thumb {
@@ -1841,8 +1848,8 @@
   }
   
   .attack-list::-webkit-scrollbar-track .item-list::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 6px #00000030;
+    box-shadow: inset 0 0 6px #00000030;
   }
   
   .attack-list::-webkit-scrollbar-thumb .item-list::-webkit-scrollbar-thumb {
