improve status list styling

--- a/index.html
+++ b/index.html
@@ -1221,7 +1221,7 @@
         if (eval('this.' + isAffected)) {
           return {filter: 'none'}
         } else {
-          return {filter: 'grayscale(80%)'}
+          return {filter: 'grayscale(0.8) brightness(0.5)'}
         }
       },
 
