--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
               </div>
             </div>
 
-            <div class="eye">
+            <div class="eye bar-shadow">
               <div class="eye-text">{{passivePerception}}</div>
             </div>
 
@@ -431,29 +431,47 @@
 
         <div v-if="showCombat" class="combat-container">
           <div class="stats-and-attacks">
+
             <div class="combat-stats">
-              <div class="armour-class">
+              <div class="armour-class bar-shadow">
                 <span class="stat-number">{{armourClass}}<a v-if="coverIncrement == 1 || 2" :style="coverBuff">&nbsp;{{coverMod}}</a></span><span>AC</span>
               </div>
-              <div class="initiative">
+              <div class="initiative bar-shadow">
                 <span class="stat-number">{{initiative}}</span><span>Initiative</span>
               </div>
-              <div class="proficiency-bonus">
+              <div class="proficiency-bonus bar-shadow">
                 <span class="stat-number">{{proficiencyBonus}}</span><span>Proficiency Bonus</span>
               </div>
-              <div class="speed">
+              <div class="speed bar-shadow">
                 <span class="stat-number" :style="speedStyle">{{totalSpeed}}</span><span>Speed</span>
               </div>
             </div>
 
             <div class="attacks-and-spells">
               <div class="attacks-and-spells-header" style="background-color: #5f5f5f;">
+
+                <div class="feature-tab" @click="showFeatureTab()" :style="featureSelect"><i class="fas fa-dragon"></i>&nbsp;&nbsp;Features</div>
                 <div class="attack-tab" @click="showAttackTab()" :style="attackSelect"><i class="fas fa-fist-raised"></i>&nbsp;&nbsp;Attacks
                   <i v-if="exhaustedIncrement >= 3" class="fas fa-dice-d20 disadvantage-d20"></i>                
                 </div>
-                <div class="spell-tab" @click="showSpellTab()" :style="spellSelect"><i class="fas fa-bolt"></i>&nbsp;&nbsp;Spellcasting</div>
+                <div class="spell-tab" @click="showSpellTab()" :style="spellSelect"><i class="fas fa-bolt"></i>&nbsp;&nbsp;Spells</div>
+                <div class="spell-slot-tab" @click="showSpellSlotTab()" :style="spellSlotSelect"><i class="fas fa-th-large"></i>&nbsp;&nbsp;Spell Slots</div>
+
               </div>
-              <ul v-if="!showSpells" class="attack-list">
+
+              <ul v-if="showFeatures" class="attack-list">
+                <li v-for="feature in features" class="attack">
+                  <a class="attack-button"><i class="fas fa-crosshairs"></i></a>
+                  <span class="attack-text">
+                    <span class="attack-name" contenteditable="true">{{feature.name}}</span>
+                    <span class="attack-bonus" contenteditable="true">{{feature.current}}</span>
+                    <span class="attack-damage" contenteditable="true">{{feature.max}}</span>
+                    <span class="attack-damage-type" contenteditable="true">{{feature.source}}</span>
+                  </span>
+                </li>
+              </ul>
+
+              <ul v-if="showAttacks" class="attack-list">
                 <li v-for="attack in attacks" class="attack">
                   <a class="attack-button"><i class="fas fa-crosshairs"></i></a>
                   <span class="attack-text">
@@ -476,8 +494,19 @@
                   </span>
                 </li>
               </ul>
-            </div>
 
+              <ul v-if="showSpellSlots" class="attack-list">
+                <li v-for="slot in spellSlots" class="attack">
+                  <a class="attack-button"><i class="fas fa-crosshairs"></i></a>
+                  <span class="attack-text">
+                    <span class="attack-name" contenteditable="true">{{slot.size}}</span>
+                    <span class="attack-bonus" contenteditable="true">{{slot.current}}</span>
+                    <span class="attack-damage" contenteditable="true">{{slot.max}}</span>
+                  </span>
+                </li>
+              </ul>
+
+            </div>
 
           </div>
         </div>
@@ -627,7 +656,7 @@
       speed: 30,
       hdSize: 'd10',
       hdCurrent: 6,
-      hpCurrent: 1,
+      hpCurrent: 60,
       hpMaximum: 80,
       xpTotal: 40000,
       strength: 
@@ -811,10 +840,63 @@
       potRoll: 0,
       hdRoll: 0,
       showCombat: false,
+      showFeatures: true,
+      showAttacks: false,
       showSpells: false,
+      showSpellSlots: false,
       showSkills: false,
       showInventory: false,
       noteContent: '',
+      features: [
+        { 
+          name: 'Superiority Dice',
+          current: '3',
+          max: '5',
+          source: 'Battle Master'
+        },
+        { 
+          name: 'Infernal Legacy',
+          current: '1',
+          max: '1',
+          source: 'Tiefling'
+        },
+        { 
+          name: 'Sentinel',
+          current: '0',
+          max: '0',
+          source: 'Feat'
+        },
+        { 
+          name: 'Dual Wielder',
+          current: '0',
+          max: '0',
+          source: 'Feat'
+        },
+        { 
+          name: 'Superiority Dice',
+          current: '3',
+          max: '5',
+          source: 'Battle Master'
+        },
+        { 
+          name: 'Infernal Legacy',
+          current: '1',
+          max: '1',
+          source: 'Tiefling'
+        },
+        { 
+          name: 'Sentinel',
+          current: '0',
+          max: '0',
+          source: 'Feat'
+        },
+        { 
+          name: 'Dual Wielder',
+          current: '0',
+          max: '0',
+          source: 'Feat'
+        }
+      ],
       attacks: [
         { 
           name: 'Dancing Blade F',
@@ -930,6 +1012,53 @@
           damageType: 'Fire',
           type: 'Attack Roll'
         }
+      ],
+      spellSlots: [
+        { 
+          size: '1',
+          current: '3',
+          max: '4'
+        },
+        { 
+          size: '2',
+          current: '2',
+          max: '3'
+        },        
+        { 
+          size: '3',
+          current: '2',
+          max: '3'
+        },
+        { 
+          size: '4',
+          current: '3',
+          max: '3'
+        },
+        { 
+          size: '5',
+          current: '2',
+          max: '3'
+        },
+        { 
+          size: '6',
+          current: '2',
+          max: '2'
+        },
+        { 
+          size: '7',
+          current: '2',
+          max: '2'
+        },
+        { 
+          size: '8',
+          current: '1',
+          max: '1'
+        },
+        { 
+          size: '9',
+          current: '1',
+          max: '1'
+        },
       ],
       inventory: [
         {
@@ -1217,8 +1346,15 @@
         return this.profBonus[String(this.level)]
       },
 
+      featureSelect: function (){
+        if (!this.showFeatures) {
+          return {backgroundColor: '#5f5f5f', color: '#cccccc'}
+        } else {
+          return {backgroundColor: '#808080', color: 'whitesmoke'}
+        }
+      },
       attackSelect: function (){
-        if (this.showSpells) {
+        if (!this.showAttacks) {
           return {backgroundColor: '#5f5f5f', color: '#cccccc'}
         } else {
           return {backgroundColor: '#808080', color: 'whitesmoke'}
@@ -1226,6 +1362,13 @@
       },
       spellSelect: function (){
         if (!this.showSpells) {
+          return {backgroundColor: '#5f5f5f', color: '#cccccc'}
+        } else {
+          return {backgroundColor: '#808080', color: 'whitesmoke'}
+        }
+      },
+      spellSlotSelect: function (){
+        if (!this.showSpellSlots) {
           return {backgroundColor: '#5f5f5f', color: '#cccccc'}
         } else {
           return {backgroundColor: '#808080', color: 'whitesmoke'}
@@ -1472,11 +1615,29 @@
 
       // Mid
 
-      showSpellTab: function () {
-        this.showSpells = true
+      showFeatureTab: function () {
+        this.showAttacks = false
+        this.showSpells = false
+        this.showSpellSlots = false
+        this.showFeatures = true
       },
       showAttackTab: function () {
+        this.showFeatures = false
         this.showSpells = false
+        this.showSpellSlots = false
+        this.showAttacks = true
+      },
+      showSpellTab: function () {
+        this.showFeatures = false
+        this.showAttacks = false
+        this.showSpellSlots = false
+        this.showSpells = true
+      },
+      showSpellSlotTab: function () {
+        this.showFeatures = false
+        this.showAttacks = false
+        this.showSpells = false
+        this.showSpellSlots = true
       },
       
       calcSkill: function (stat, skill) {
@@ -2287,7 +2448,7 @@
     width: 70%;
   }
 
-  .saves-header, .skills-header, {
+  .saves-header, .skills-header {
     padding: 0.6rem !important;
     background-color: #5f5f5f;
   }
@@ -2299,13 +2460,13 @@
     background-color: #5f5f5f;
   }
 
-  .attack-tab, .spell-tab {
-    width: 25%;
+  .feature-tab, .attack-tab, .spell-tab, .spell-slot-tab {
+    flex-grow: 1;
     padding: 0.6rem;
     text-align: center;
   }
 
-  .attack-tab:hover, .spell-tab:hover {
+  .feature-tab:hover, .attack-tab:hover, .spell-tab:hover, .spell-slot-tab:hover {
     cursor: pointer;
     filter: brightness(0.8);
     color: white;
